--- a/enrollment-managment-kapila/src/main/resources/application.properties
+++ b/enrollment-managment-kapila/src/main/resources/application.properties
@@ -21,9 +21,11 @@ client.student.service.app.name=SCHOOL-STUDENT-SERVICE
 client.sclass.service.app.name=SCHOOL-CLASS-SERVICE
 
 
-feign.client.config.default.connect-timeout=60000
-feign.client.config.default.read-timeout= 60000
+feign.client.config.SCHOOL-STUDENT-SERVICE.connect-timeout=2000
+feign.client.config.SCHOOL-STUDENT-SERVICE.read-timeout= 2000
 
+feign.client.config.SCHOOL-CLASS-SERVICE.connect-timeout=2000
+feign.client.config.SCHOOL-CLASS-SERVICE.read-timeout= 2000
 
 spring.zipkin.base-url=http://127.0.0.1:9411/
 #feign.hystrix.enabled=true
