--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -8,10 +8,12 @@ eureka.instance.lease-renewal-interval-in-seconds=30
 
 spring.application.name=SCHOOL-API-GATEWAY
 
+#security.oauth2.resource.jwt.key-value=kapilacom
 #zuul.ignored-services='*'
+#zuul.sensitiveHeaders=Cookie,Set-Cookie
+
 zuul.routes.SCHOOL-STUDENT-SERVICE.path=/student-service/**
 zuul.routes.SCHOOL-STUDENT-SERVICE.service-id=SCHOOL-STUDENT-SERVICE
-
 
 zuul.routes.SCHOOL-ENROLLMENT-SERVICE.path=/enrollment-service/**
 zuul.routes.SCHOOL-ENROLLMENT-SERVICE.service-id=SCHOOL-ENROLLMENT-SERVICE
@@ -19,9 +21,14 @@ zuul.routes.SCHOOL-ENROLLMENT-SERVICE.service-id=SCHOOL-ENROLLMENT-SERVICE
 zuul.routes.SCHOOL-CLASS-SERVICE.path=/class-service/**
 zuul.routes.SCHOOL-CLASS-SERVICE.service-id=SCHOOL-CLASS-SERVICE
 
+zuul.routes.SCHOOL-AUTH-SERVER.path=/oauth/**
+zuul.routes.SCHOOL-AUTH-SERVER.service-id=SCHOOL-AUTH-SERVER
+
+
 zuul.host.socket-timeout-millis=60000
 zuul.host.connect-timeout-millis= 60000
 zuul.host.connection-request-timeout-millis=60000
+
 
 
 SCHOOL-CLASS-SERVICE.ribbon.ConnectTimeout=2500
@@ -32,5 +39,8 @@ SCHOOL-ENROLLMENT-SERVICE.ribbon.ReadTimeout=2500
 
 SCHOOL-STUDENT-SERVICE.ribbon.ConnectTimeout=2500
 SCHOOL-STUDENT-SERVICE.ribbon.ReadTimeout=2500
+
+SCHOOL-AUTH-SERVER.ribbon.ConnectTimeout=2500
+SCHOOL-AUTH-SERVER.ribbon.ReadTimeout=2500
 
 
